--- a/MyApp/MyApp.Shared/Level1.xaml
+++ b/MyApp/MyApp.Shared/Level1.xaml
@@ -1,15 +1,15 @@
-﻿<Page
-    x:Class="MyApp.MainPage"
+﻿<UserControl
+    x:Class="MyApp.Level1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MyApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    d:DesignHeight="300"
+    d:DesignWidth="400">
 
     <StackPanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <local:Level1/>
         <TextBlock Text="{Binding Path=TestMe}" Margin="20" FontSize="30" />
     </StackPanel>
-</Page>
+</UserControl>
